--- a/src/pages/thankyou.html
+++ b/src/pages/thankyou.html
@@ -11,14 +11,15 @@
   <body>
     <img class="background-image" />
     <header>
-      <h1>
-        So White Clinic Klinika stomatologii w Katowicach
-      </h1>
+      <h1>So White Clinic Klinika stomatologii w Katowicach</h1>
+      <div class="container" >
+        <img id="logo" alt="logo" class="logo" />
+      </div>
     </header>
     <main class="hero">
       <section>
         <div class="container">
-          <img id="logo" alt="logo" />
+          <img id="logo" alt="logo" class="logo"/>
           <h1>Dziękujemy za przesłanie formularza</h1>
           <p>Skontaktujemy się najszybciej jak to będzie możliwe.</p>
           <a href="/" class="primary">Wróć na stronę główną</a>
