footer, social icons

--- a/src/index.html
+++ b/src/index.html
@@ -171,7 +171,7 @@
             target="blank"
             rel="noopener noreferrer"
           >
-            <!-- <img id="fb" class="social-icon" alt="facebook" /> -->
+            <img id="fb" class="social-icon" alt="facebook" />
           </a>
 
           <a
@@ -179,14 +179,7 @@
             target="blank"
             rel="noopener noreferrer"
           >
-            <!-- <img id="in" class="social-icon" alt="instagram" /> -->
-          </a>
-          <a
-            href="https://www.youtube.com/channel/UCEZpavPFvS4TxTMh-w9CW1g"
-            target="blank"
-            rel="noopener noreferrer"
-          >
-            <!-- <img id="yt" class="social-icon" alt="youtube" /> -->
+            <img id="in" class="social-icon" alt="instagram" />
           </a>
         </div>
       </div>
