styles, thank you page

--- a/src/index.html
+++ b/src/index.html
@@ -17,29 +17,23 @@
           <img id="logo" alt="logo" class="logo" />
         </div>
         <div class="hero-content container">
-          <h1>Wish you</h1>
-          <h2>smile</h2>
+          <h1>Wish you <span class="decor">smile</span></h1>
           <p>
             Hollywood Smile to śnieżnobiały, perfekcyjny uśmiech dobrze znany z
             wielkiego ekranu i okładek kolorowych czasopism. Dzięki So White
             Clinic jest on teraz osiągalny również dla Ciebie!
           </p>
-          <!-- <p>
-            Dla nas Hollywood smile oznacza kompleksowe
-            podejście do poprawy estetyki zębów i uśmiechu pacjenta, mające na
-            celu stworzenie idealnie harmonijnego i atrakcyjnego wyglądu.
-          </p> -->
-          <h3>Od wymarzonego uśmiechu dzieli Cię już tylko jeden krok!</h3>
+          <h2>Od wymarzonego uśmiechu dzieli Cię już tylko jeden krok!</h2>
           <p>Skontaktuj się z nami! Zadzwoń lub wypełnij formularz!</p>
           <div>
-            <a href="tel:+48326060400" class="primary">Zadzwoń do nas</a>
+            <a href="tel:+48326060400" class="primary"><img id="phone" class="icon"></img>Zadzwoń</a>
             <a href="#form-section" class="secondary">Wypełnij formularz</a>
           </div>
         </div>
       </section>
       <section id="form-section" class="form-section">
         <div class="container">
-          <h4>Umów konsultację w So White Clinic</h4>
+          <h3>Umów konsultację w So White Clinic</h3>
           <p>
             Zadaj nam pytanie lub zostaw numer telefonu. Nasze recepcjonistki
             skontaktują się z Tobą, by omówić Twoją drogę do pięknego uśmiechu!
