--- a/src/pages/thankyou.html
+++ b/src/pages/thankyou.html
@@ -9,20 +9,25 @@
    
   </head>
   <body>
-    <img class="background-image" />
+    <div class="background-image"></div>
     <header>
       <h1>So White Clinic Klinika stomatologii w Katowicach</h1>
-      <div class="container" >
-        <img id="logo" alt="logo" class="logo" />
-      </div>
     </header>
-    <main class="hero">
-      <section>
+    <main >
+      <section class="hero">
         <div class="container">
-          <img id="logo" alt="logo" class="logo"/>
-          <h1>Dziękujemy za przesłanie formularza</h1>
-          <p>Skontaktujemy się najszybciej jak to będzie możliwe.</p>
-          <a href="/" class="primary">Wróć na stronę główną</a>
+          <img id="logo" alt="logo" class="logo" />
+        </div>
+        <div class="hero-content container">
+          <h1>Dziękujemy <br>
+            za przesłanie 
+            formularza</span></h1>
+          <h2>
+           Skontaktujemy się najszybciej jak to będzie możliwe.
+          </h2>
+          <div>
+            <a href="/" class="primary">Wróć na stronę główną</a>
+          </div>
         </div>
       </section>
     </main>
