icons, hero img

--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,7 @@
             <a href="#form-section" class="secondary">Wypełnij formularz</a>
           </div>
         </div>
+        <div class="mobile-background-image"></div>
       </section>
       <section id="form-section" class="form-section">
         <div class="container">
@@ -146,9 +147,10 @@
     <footer>
       <div class="container">
         <h4>So White Clinic</h4>
-        <address>Katowice, ul. Czajek 5</address>
-        <p><a href="tel:+48322037425"> 32 60 60 400</a></p>
+        <address><img id="home" class="icon">Katowice, ul. Czajek 5</address>
+        <p><img id="phone1" class="icon"><a href="tel:+48322037425"> 32 60 60 400</a></p>
         <p>
+          <img id="mail" class="icon">
           <a href="mailto:recepcja@sowhiteclinic.pl"
             >recepcja@sowhiteclinic.pl</a
           >
