scroll to top btn

--- a/src/index.html
+++ b/src/index.html
@@ -176,6 +176,9 @@
         </div>
       </div>
     </footer>
+    <button id="scrollToTop" class="scroll-to-top-btn" title="Do góry">
+      <div></div>
+    </button>
     <div class="cookies d-none">
       <p>
         Ta strona korzysta z ciasteczek aby świadczyć usługi na najwyższym
