--- a/src/pages/thankyou.html
+++ b/src/pages/thankyou.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="favicon.ico">
+    <meta name="description" content="Twoja droga do pięknego uśmiechu! Wybielanie, prosta korekta zgryzu, bonding, licówki, korony, usuwanie zębów, implanty. Zadzwoń i umów wizytę: 32 60 60 400">
     <title><%= htmlWebpackPlugin.options.title %></title>
 
    
@@ -17,7 +18,7 @@
     <main >
       <section class="hero">
         <div class="container">
-          <img id="logo" alt="logo" class="logo" />
+          <img id="logo" alt="logo" class="logo" width="200" height="66"/>
         </div>
         <div class="hero-content container">
           <h1>Dziękujemy <br>
